# secret-santa

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
secret_santa/: Pair.py  PairsList.py  PersonsList.py  __init__.py  secret_santa.py
src/: Pair.py  PairsList.py  Person.py  PersonList.py  secret_santa.py
tests/: conftest.py  test_person.py  test_secret_santa.py
