[metadata]
name = secret_santa
version = secret_santa.__version__
author = secret_santa.__author__
author_email = secret_santa.__email__
url = https://github.com/nicolasdecorbez/secret-santa
description = Manage your secret santa through command-line interface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = santa, secret
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pytest

[options.entry_points]
console_scripts =
    secret-santa = secret_santa.secret_santa:main
